<resources>
    <string name="app_name">Resource Project</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="sensor">Sensor</string>
    <string name="locale_name">Default</string>
    <string name="orientations">Orientations</string>
    <string name="locales">Locales</string>
    <string name="default_locale">Default</string>
    <string name="english_gb">English GB</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="themes">Themes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="colored">Colored</string>
    <string name="unspecified">Unspecified</string>
    <string name="sensor_portrait">Sensor Portrait</string>
    <string name="sensor_landscape">Sensor Landscape</string>
    <string name="full_sensor">Full Sensor</string>
    <string name="full_user">Full User</string>
    <string name="locked">Locked</string>
    <string name="russian">Russian</string>
    <string name="german">German</string>
</resources>